<resources>
    <string name="app_name">CaHProject</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_game_button_text">Spiel suchen</string>
    <string name="host_game_button_text">Spiel eröffnen</string>
    <string name="settings_button_text">Optionen</string>
    <string name="about_button_text">Über Cards and Humor</string>
    <string name="back_button">Zurück</string>
    <string name="next_card">Nächste Karte</string>
    <string name="prev_card">Vorherige Karte</string>
    <string name="chose_card">Karte Auswählen</string>
    <string name="chose_winner">Sieger Auswählen</string>
    <string name="submit">Auswahl abschicken</string>
    <string name="game_name">Spielname</string>
    <string name="refresh">Aktualisieren</string>
    <string name="waiting_for_other_players">Warte auf andere Spieler</string>
    <string name="start_game">Spiel Starten</string>
    <string name="you_selector">Du bist der Zar!</string>

    <string name="about_text">BlaBla</string>

    <string name="title_activity_settings">SettingsActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
