<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hgbjg14.cahproject.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:weightSum="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="168dp"
            android:layout_weight="0.90">

            <ImageView
                android:layout_width="245dp"
                android:layout_height="match_parent"
                android:id="@+id/logo_image"
                android:adjustViewBounds="false"
                android:layout_weight="1"
                app:srcCompat="@mipmap/logo"
                android:scaleType="center" />
        </LinearLayout>

        <Button
            android:text="@string/search_game_button_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/search_game_button" />

        <Button
            android:text="@string/host_game_button_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/host_game_button" />

        <Button
            android:text="@string/settings_button_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/settings_button" />

        <Button
            android:text="@string/about_button_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/about_button" />

    </LinearLayout>

</RelativeLayout>
