<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/backgroundColor"
    tools:context="com.hgbjg14.cahproject.AboutActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/about_button_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/about_header"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:text="@string/about_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />

        <Button
            android:text="@string/back_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/about_back_button"
            android:background="@drawable/border_style_slim" />

    </LinearLayout>

</RelativeLayout>
