<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_host_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/backgroundColor"
    tools:context="com.hgbjg14.cahproject.HostGameActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/host_game_button_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/host_header"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/hostgame_name"
            android:hint="@string/game_name"
            android:textSize="20sp" />

        <Button
            android:text="@string/host_game_button_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_host_submit"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/border_style_slim" />

        <Button
            android:text="@string/back_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_back_host"
            android:background="@drawable/border_style_slim"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />
    </LinearLayout>
</RelativeLayout>
