<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_waiting_host"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hgbjg14.cahproject.WaitingHostActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical">
        <RelativeLayout
            android:id="@+id/host_loadingPanel"
            android:layout_width="match_parent"
            android:layout_height="161dp"
            android:gravity="center" >

            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:indeterminate="true" />
        </RelativeLayout>

        <TextView
            android:text="@string/waiting_for_other_players"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/waiting_host_text"
            android:textStyle="normal|bold"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:text="player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/waiting_host_players"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:textStyle="normal|bold"
            android:textSize="30sp" />

        <Button
            android:text="@string/start_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/waiting_host_start"
            android:background="@drawable/border_style_slim"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp" />

        <Button
            android:text="@string/back_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/waiting_host_back"
            android:background="@drawable/border_style_slim"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp" />
    </LinearLayout>

</RelativeLayout>
